--- a/HospitalWPF/HospitalWPF.csproj
+++ b/HospitalWPF/HospitalWPF.csproj
@@ -146,6 +146,9 @@
     <Compile Include="view_admin\paciente\consultarPaciente.xaml.cs">
       <DependentUpon>consultarPaciente.xaml</DependentUpon>
     </Compile>
+    <Compile Include="view_relatorios\convenioRelatorio.xaml.cs">
+      <DependentUpon>convenioRelatorio.xaml</DependentUpon>
+    </Compile>
     <Compile Include="view_relatorios\medicoRelatorio.xaml.cs">
       <DependentUpon>medicoRelatorio.xaml</DependentUpon>
     </Compile>
@@ -231,6 +234,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="view_relatorios\convenioRelatorio.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="view_relatorios\medicoRelatorio.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -254,12 +261,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="ConvenioRelatorio.rdlc" />
     <EmbeddedResource Include="MedicoRelatorio.rdlc" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\HospitalModel.Convenio.datasource" />
     <None Include="Properties\DataSources\HospitalModel.Medico.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
